# length-routing-study

./: .gitignore  README.md  pyproject.toml
data/: README.md
data/cache/: manifest.json
results/: README.md  comprehensive_eval.json  variant_comparison.json
scripts/: calibrate_cost_model.py  generate_diverse_qkv.py  generate_high_sparsity_qkv.py  generate_lm_patterns_qkv.py  generate_real_text_qkv.py  multi_text_study.py  run_comprehensive_eval.py  run_individual_strategy_benchmark.py  run_length_study.py  run_real_text_eval.py  run_real_text_mcq_backend_eval.py  run_routing_comparison.py  run_selector_study.py  run_strategy_sweep.py  run_variant_comparison.py  visualize_length_study.py
src/length_routing_study/: __init__.py  _paths.py  calibration.py  cost_model.py  dispatcher.py  empirical_sweep.py  length_router.py  length_study.py  mask_selectors.py  patch.py  real_text_tasks.py  selection_strategies.py  selector_base.py  selector_sweep.py  sparse_plan.py  sparsity_estimator.py
