[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "length-routing-study"
version = "0.1.0"
description = "Length-aware prefill routing: theory-driven dispatch + empirical PBS/Flex parameter sweep"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
